--- a/package.json
+++ b/package.json
@@ -4,11 +4,12 @@
   "description": "Backend for Cars",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/florianmoss/cars-backend.git"
+    "url": "git+https://github.com/florianmoss/cars-backend"
   },
   "author": "Florian Moss",
   "license": "ISC",
